--- a/P004411.opf/meta.yml
+++ b/P004411.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004411
+id: P004411
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG21754
   title: བོད་ཀྱི་སྨན་རྩིས་ཆེད་རྩོམ་ཕྱོགས་བསྡུས།
-  volume: ''
   author: ''
+  volumes: {}
