--- a/P004411.opf/layers/v001/Pagination.yml
+++ b/P004411.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 733a948d1532414cb5b574a38c382ed6
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f39c88f1090e496593ef5cb83bbd6843:
