--- a/P004411.opf/meta.yml
+++ b/P004411.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004411
 initial_creation_type: ocr
 created_at: 27/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:19:12.854528
 source_metadata:
   id: bdr:W1KG21754
   title: བོད་ཀྱི་སྨན་རྩིས་ཆེད་རྩོམ་ཕྱོགས་བསྡུས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 442
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
